<resources>
    <string name="app_name">On Call Phone Manager</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_contact_info">ContactInfo</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="company">Company</string>
    <string name="submit">Done</string>
    <string name="phone">Phone</string>
    <string name="digits">0123456789+()</string>
    <string name="area_code">Area Code</string>
    <string name="title_activity_new_user_on_boarding">NewUserOnBoardingActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="update">Update</string>
    <string name="company_name_hint">Company Name</string>
    <string name="contact_name_hint">Contact Name</string>
    <string name="phone_number_hint">Phone Number</string>
    <string name="required">* Required</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Trash Button to Delete Contacts.</string>
    <string name="contact_initials">CN</string>
    <string name="contact_name">Contact Name</string>
    <string name="company_name">Company</string>
    <string name="phone_num">###-###-####</string>
    <string name="on_call_feature">On Call Feature</string>
    <string name="DnD">Allow Do Not Disturb Access</string>
    <string name="title_activity_on_boarding">OnBoardingActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edit_contact">Edit Contact</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="add_contact_image">Add Contact Image</string>
    <string name="remove_contact">remove</string>
    <string name="no_contacts">No Contacts</string>
</resources>
