<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@android:color/white">

    <ImageView
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:layout_margin="16dp"
        android:src="@drawable/add_contact_icon"
        android:contentDescription="@string/add_contact_image"
        android:layout_gravity="center_horizontal"
        android:visibility="visible"/>

    <TextView
        android:id="@+id/circle_text"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:layout_centerVertical="true"
        android:layout_gravity="center"
        android:layout_margin="16dp"
        android:background="@drawable/circle_contact_template_row"
        android:gravity="center"
        tools:text="@string/contact_initials"
        android:textColor="@android:color/white"
        android:textSize="48dp"
        android:visibility="gone"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:textColorHint="@color/primaryTextColor">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edCompanyName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/company_name_hint"
            android:inputType="textCapWords"
            android:textColor="@color/primaryTextColor"
            android:maxLines="1"
            android:textSize="16sp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:textColorHint="@color/primaryTextColor">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edContactName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:hint="@string/contact_name_hint"
            android:textColor="@color/primaryTextColor"
            android:inputType="textCapWords"
            android:maxLines="1"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="@string/phone_number_hint"
        android:textColorHint="@color/primaryTextColor"
        app:errorTextAppearance="@android:color/holo_red_dark">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint=""
            android:inputType="phone"
            android:maxLength="10"
            android:maxLines="1"
            android:textColor="@color/primaryTextColor"
            android:textSize="16sp" />
    </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/bSubmit"
            android:layout_width="96dp"
            android:layout_height="56dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@color/primaryColor"
            android:layout_gravity="end"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:text="@string/submit"
            android:textSize="18sp"/>

</androidx.appcompat.widget.LinearLayoutCompat>