<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    android:layout_marginBottom="16dp"
    android:layout_marginTop="16dp"
    android:id="@+id/contactTemplateRow"
    android:background="@color/primaryLightColor">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="center"
                android:textSize="24sp"
                android:background="@drawable/circle_contact_template_row"
                android:text="@string/first_initial"
                android:textColor="@color/primaryTextColor"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="16dp"
                android:layout_gravity="center">

                <TextView
                    android:id="@+id/tvContactName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:text="@string/contact_name"
                    android:textColor="@color/primaryTextColor"
                    android:textAppearance="@android:style/TextAppearance.Material.Medium"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvCompanyName"
                    android:textColor="@color/primaryTextColor"
                    android:text="@string/company_name"/>


            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/tvDisplayNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:text="@string/phone_num"
            android:textColor="@color/primaryTextColor"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            tools:ignore="RelativeOverlap"/>

    </RelativeLayout>

</LinearLayout>